added env into gitignore

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-PORT = 5001,
-apiUrl =  'localhost:5001',
-MONGO_URL = "mongodb+srv://chiruvella8660:aZUartA1zd454NsB@cluster0.oa4aoba.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
-SECRET_KEY = 'se3cr3t',
-CLOUDINARY_API_KEY = "467416335428985",
-CLOUD_NAME = "dxzkxeolt",
-CLOUDINARY_API_SECRET = "ZlbIBLwCJ6fqU7_KlYwgB93Gxtc",
+PORT = 5001
+apiUrl =  'localhost:5001'
+MONGO_URL = "mongodb+srv://chiruvella8660:aZUartA1zd454NsB@cluster0.oa4aoba.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+SECRET_KEY = 'se3cr3t'
+CLOUDINARY_API_KEY = "467416335428985"
+CLOUD_NAME = "dxzkxeolt"
+CLOUDINARY_API_SECRET = "ZlbIBLwCJ6fqU7_KlYwgB93Gxtc"
 CLOUD_ENV_VAR = "CLOUDINARY_URL=cloudinary://467416335428985:ZlbIBLwCJ6fqU7_KlYwgB93Gxtc@dxzkxeolt"
